# cpe3300-netcats

./: Cargo.toml  Embed.toml  README.md  economy.csv  malformed.csv  not_yours.csv  wrong_length.csv
.cargo/: config.toml
src/: main.rs  receive.rs  transmit.rs
test_csv/: economy_correct_crc.csv  economy_wrong_crc.csv  not_yours.csv
