[package]
name = "cpe3300-netcats"
version = "0.1.0"
authors = ["kali <20001044+kali-muon@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }

# # rtic1
# rtic-monotonic = { version = "1.0", optional = true }
# systick-monotonic = { version = "1.0.1", optional = true }
# cortex-m-rtic = { version = "1.1.4", features = ["test-critical-section"], optional = true }

# rtic2
rtic-time = { version = "1.3", optional = false }
rtic-monotonics = { version = "1.5", features = ["cortex-m-systick"], optional = false }
rtic = { version = "2.0.1", features = ["thumbv7-backend"], optional = false }

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
