[package]
name = "cpe3300-netcats"
version = "0.1.0"
authors = ["kali <20001044+kali-muon@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# embassy things
embassy-stm32 = { version = "0.1.0", features = ["stm32f411re", "defmt", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# # Erik's embassy config
# embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
# embassy-sync = { version = "0.5.0", features = ["defmt"] }
# embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
# embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-usb = { version = "0.1.0", features = ["defmt" ] }
# embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }

panic-halt = "0.2.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"

# embedded-hal = "1.0.0"
# embedded-io = { version = "0.6.0" }
# embedded-io-async = { version = "0.6.1" }

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
