[package]
name = "cpe3300-netcats"
version = "0.1.0"
authors = ["kali <20001044+kali-muon@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# embassy things
embassy-stm32 = { version = "0.1.0", features = ["stm32f411re", "defmt", "unstable-pac", "memory-x", "time-driver-tim2", "exti", "chrono"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
# embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

panic-halt = "0.2.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
